--- a/estilos/style.css
+++ b/estilos/style.css
@@ -79,8 +79,9 @@ a {
 }
 
 p {
-  text-align: center;
   /* PARAGRAFOS DOS BLOCOS */
+  text-align: center;
+
   color: white;
   font-size: 18px;
   padding-left: 30px;
@@ -136,37 +137,31 @@ h3 {
 }
 
 .titulo-album:hover {
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
 }
 
 .redes-sociais {
   background-color: #b69c8c;
-  padding: 10px;
 }
 
 .redes-sociais > a {
   text-decoration: none;
-  padding: 10%;
-  margin-left: 115px;
 }
 
 .rodape {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   background-color: black;
   height: 90px;
 }
 
 .logo-rodape {
-  margin-left: 495px;
-  width: 70px;
 }
 
 /**************  CELULAR  ****************/
 @media screen and (min-width: 320px) and (max-width: 600px) {
   body {
     /* TODO CORPO DA PAGINA */
+    width: 100vw;
+    overflow-x: hidden;
   }
 
   header.cabecalho {
@@ -260,18 +255,20 @@ h3 {
     /* TITULO DOS ALBUMS */
     color: white;
     font-size: 18px;
-    padding: 0;
+
+    margin-top: 20px;
   }
 
   .player {
     /* IFRAME SPOTIFY */
-    transition: 0.1s;
     width: 100%;
     display: flex;
     box-shadow: 5px 6px 20px 0px rgba(0, 0, 0, 0.534);
   }
 
-  .titulo-album:hover {
+  .player:hover {
+    transform: scale(1.1);
+    transition: 0.1s;
   }
 
   .redes-sociais {
@@ -281,8 +278,20 @@ h3 {
   }
 
   .rodape {
+    background-color: black;
+    height: 65px;
   }
 
   .logo-rodape {
+    background-color: blue;
+    margin-left: 495px;
+    width: 0px;
+    color: white;
+  }
+
+  .texto-rodape {
+    text-align: center;
+    color: white;
+    font-size: 15px;
   }
 }
