--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,7 +12,7 @@ creme-menu: #b69c8c
 }
 
 /**************  CELULAR  ****************/
-@media screen and (max-width: 600px) {
+@media screen {
   body {
     /* TODO CORPO DA PAGINA */
     overflow-x: hidden;
@@ -33,7 +33,11 @@ creme-menu: #b69c8c
     background-size: contain;
     background-position: center;
     width: 100%;
-    height: 34vh;
+    height: 25vh;
+  }
+
+  .logo-top {
+    display: none;
   }
 
   .menu {
@@ -146,7 +150,167 @@ creme-menu: #b69c8c
   }
 }
 
-/*-----------------  teste  ------------------*/
+/*************   DESKTOP   *************/
+
+@media screen and (min-width: 600px) {
+  .cabecalho {
+    display: flex;
+  }
+  .capa {
+    /* SOMENTE A FOTO DE CAPA */
+    background-image: url(../imagens/everglow-capa.jpeg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100%;
+    height: 59vh;
+  }
+
+  .logo-top {
+    display: inline-block;
+    width: 150px;
+    height: 160px;
+    margin: 80px 0px 0px 20px;
+  }
+
+  .menu {
+    /* LINHA QUE DEMARCA O TAMANHO DOS LINKS DO MENU */
+    background-color: #b69c8c;
+    text-align: center;
+    padding: 0;
+  }
+
+  .menu > a {
+    /* LINKS DO MENU */
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
+    border: none;
+    border-radius: 0;
+    padding: 15px;
+    margin: 0px 20px 0px 20px;
+  }
+
+  .menu > a:hover {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.466);
+  }
+
+  .container {
+    /* MAIN - ESPAÇO DO CONTEUDO DO CENTRO */
+    background-color: #617763e5;
+    margin: auto;
+    box-shadow: inset 0px 4px 20px 0px rgba(0, 0, 0, 0.331);
+    padding: 50px;
+  }
+
+  h2,
+  h3 {
+    /* SUBTITULOS DOS DOIS PRIMEIROS BLOCOS DE TEXTO */
+    text-align: center;
+    color: white;
+    font-size: 2em;
+  }
+
+  h3.discografia {
+    text-decoration: overline;
+  }
+
+  p {
+    /* PARAGRAFOS DOS BLOCOS */
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+    padding: 20px;
+  }
+
+  a {
+    /* LINKS QUE VAO PARA PAGINAS EXTERNAS */
+    color: white;
+  }
+
+  abbr {
+    /* LEGENDAS DAS ABREVIAÇÕES DOS NOMES */
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+
+  .video-slay {
+    /* VIDEO SLAY */
+  }
+
+  .players-spotify {
+    /* SECTION */
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .titulo-album {
+    /* TITULO DOS ALBUMS */
+    color: white;
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  .player {
+    /* IFRAME SPOTIFY */
+    width: 100%;
+    display: flex;
+    box-shadow: 5px 6px 20px 0px rgba(0, 0, 0, 0.534);
+  }
+
+  .player:hover {
+    transform: scale(1.1);
+    transition: 0.1s;
+  }
+
+  .redes-sociais {
+    /*div com as imagens e os links das redes sociais*/
+    background-color: #b69c8c;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 60px;
+  }
+
+  .redes-sociais > a {
+    text-decoration: none;
+  }
+
+  .redes-sociais > a > img {
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+  }
+
+  .redes-sociais > a > img:hover {
+    transform: scale(1.1);
+    transition: 0.1s;
+  }
+
+  .rodape {
+    /*foter*/
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    height: 50px;
+  }
+
+  .logo-rodape {
+    width: 45px;
+  }
+
+  .texto-rodape {
+    display: flex;
+    align-items: center;
+    font-size: 1em;
+  }
+}
+
+/*----------------- teste ------------------*/
 @media screen and (max-width: 120px) {
   body {
     /* TODO CORPO DA PAGINA */
