--- a/estilos/integrantes.css
+++ b/estilos/integrantes.css
@@ -98,28 +98,35 @@
 
 @media screen and (min-width: 992px) {
   article {
-    height: 280px;
-    padding-bottom: 80px;
+    height: 100%;
+    padding-bottom: 30px;
     display: flex;
-    padding-top: 30px;
+  }
+
+  .integrantes-ativo:visited {
+    color: white;
   }
 
   .texto-nos-apresentando {
     text-align: center;
     color: white;
     font-size: 40px;
-    padding-top: 50px;
+    padding: 50px;
     text-decoration: overline;
   }
 
   .foto1 {
-    margin-left: 30px;
+    width: 50%;
+    height: 300px;
+    /* margin-left: 30px; */
     border-radius: 5%;
     box-shadow: 2px 11px 20px 0px rgba(255, 255, 255, 0.482);
   }
 
   .foto2 {
-    margin-right: 30px;
+    width: 50%;
+    height: 300px;
+    /* margin-right: 30px; */
     border-radius: 5%;
     box-shadow: 2px 11px 20px 0px rgba(0, 0, 0, 0.482);
   }
